# MW-Pose

./: README.md  Refiner-Instruction-Chinese.md  camera_capture  logger_plot.m  logger_val_plot.m  picture_demo.py  train_dragan.py
demo/: CMakeLists.txt  main.cpp  walabot.cpp  walabot.hpp  walabot_test.cpp
openpose_utils/: DataLoader.py  Saver.py  __init__.py
res/: 1551761233560
src/: train_dragan.py
src/dataset/: __init__.py  dataset.py  dataset_3D.py  mnist.py
src/model/: BIRNN.py  DRAGAN.py  VGGNet.py  __init__.py  deseqnet.py  resnet34.py  rnn.py
src/model/arch_model/: __init__.py  base_arch.py  resnet.py  vgg.py
src/teacher/: HPE.py  annotation.py  detect.py  estimate.py  utils.py
src/teacher/dataset/: DataLoader.py
src/teacher/model/: __init__.py  darknet.py  hourglass.py
src/utils/: __init__.py  annotate.py  calibPoint.mat  calib_func.m  calibrate.py  calibration.m  capture.py  datamatch.py  decode.py  evaluation.py  files.py  heatmap.py  imageproc.py  initialize.py  json_tools.py  logger.py  pose_decoder.py  printer.py  refine.py  refine_openpose.py  undistort.py  walabot.py  webcam_test.py
train/: train_VGG.py  train_deseqnet.py  train_test.py  valid_deseqnet.py
